--- a/PortfolioPunteri/src/app/components/logo-ap/logo-ap.component.html
+++ b/PortfolioPunteri/src/app/components/logo-ap/logo-ap.component.html
@@ -1,1 +1,19 @@
-<img src="../../../assets/logo ap.png" id="logoAP">
+<div class="row">
+    <div class="container">
+        <div class="logo">
+            <img src="../../../assets/logo ap.png" id="logoAP">
+        </div>
+        <div class="redes">
+         <a href=""><img src="../../../assets/logo facebook.png" id="facebook"></a>
+         <a href=""><img src="../../../assets/logo instagram.png" id="instagram"></a>
+         <a href=""><img src="../../../assets/logo twitter.png" id="twitter"></a>
+         <a href=""><img src="../../../assets/logo github.png" id="github"></a>
+         <a href=""><img src="../../../assets/logo linked in.png" id="linkedin"></a>
+         <button type="button" class="btn btn-outline-light">INGRESO</button>
+        </div>
+    </div>
+
+
+</div>
+
+
